@@ -514,4 +514,11 @@
       permission="zope2.View"
       />
 
+  <browser:page
+      for="*"
+      name="portlet_deferred_render"
+      class=".deferred.PortletDeferredRendererHelperView"
+      permission="zope2.View"
+      />
+
 </configure>
