@@ -10,6 +10,9 @@ Changelog
 - Remove wrong TOC entry "Bookmark & Share". TOC positioning at top. Format TOC levels.
   [Cesar Gonzalez]
 
+- Modifies dashboard's portlets to make a deferred render.
+  [Jose Dinuncio]
+
 - Fixes Create Task overlay style. Add box-sizing to textarea in overlays.
   [Cesar Gonzalez]
 
